--- a/css/section8.css
+++ b/css/section8.css
@@ -11,7 +11,7 @@ body {
 
 .sec-8 {
   background-color: #1e1e1e;
-  height: 400vh;
+  /* height: 400vh; */
 }
 
 .sec-8-title p {
@@ -36,7 +36,7 @@ body {
   gap: 10px;
 }
 .quote .quote_chat1 {
-  margin-top: -8%;
+  margin-top: 2%;
   position: absolute;
   right: 2%;
 }
@@ -46,7 +46,7 @@ body {
 }
 
 .quote .quote_chat2 {
-  margin-top: 0%;
+  margin-top: 10%;
   position: absolute;
   right: 2%;
 }
@@ -57,7 +57,9 @@ body {
 
 .i05_hero {
   position: absolute;
-  margin-top: -50%;
+  /* margin-top: -50%; */
+  margin-top: 25vw;
+  margin-left: -63vw;
 }
 .i05_hero img {
   /* width: 70%; */
@@ -67,6 +69,8 @@ body {
 .i01_halftone {
   z-index: 1;
   margin-top: 10%;
+  padding-top: 10vw;
+  /* margin-bottom: 0; */
 }
 .i01_halftone img {
   width: 100%;
