--- a/css/section9.css
+++ b/css/section9.css
@@ -10,6 +10,7 @@ body {
 .sec-9 {
   height: 200vh;
   background-color: #fab4b6;
+  margin-top: -1vw;
 }
 
 .sec-9-title {
@@ -39,7 +40,7 @@ body {
   font-size: 7.321vw;
   margin: 30px 0;
   /* line-height: 80px; */
-  line-height: 5.857vw;
+  line-height: 7.857vw;
   text-align: center;
   font-weight: 800;
   text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000,
@@ -57,8 +58,8 @@ body {
 
 .sec-9-card1 {
   display: flex;
-  margin-top: 50px;
-
+  /* margin-top: 50px; */
+  margin-top: 3.66vw;
   justify-content: center;
 }
 
@@ -113,6 +114,7 @@ body {
 
 .sec-9-card2 {
   display: flex;
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  margin-top: 3.66vw;
   justify-content: center;
 }
