--- a/css/section5.css
+++ b/css/section5.css
@@ -119,8 +119,14 @@ body {
     margin-top: 110vw;
   }
 }
+/* --------BIG PC-------- */
+@media only screen and (min-width: 2501px) {
+  .sec-5-div .sec-5-bg {
+    margin-top: 160vw;
+  }
+}
 /* --------PC-------- */
-@media only screen and (min-width: 1366px) and (max-width: 3839px) {
+@media only screen and (min-width: 1366px) and (max-width: 2500px) {
   .sec-5-div .sec-5-bg {
     margin-top: 220vw;
   }
