--- a/css/section6.css
+++ b/css/section6.css
@@ -9,6 +9,7 @@ body {
   background-color: #1e1e1e;
   /* height: 300vh; */
   height: 250vh;
+  margin-bottom: 0;
   /* height: 129.312vw; */
 }
 .sec-6 .sec-6-title {
