--- a/css/section5.css
+++ b/css/section5.css
@@ -125,6 +125,12 @@ body {
     margin-top: 160vw;
   }
 }
+@media only screen and (min-width: 1900px) {
+  .sec-5 {
+    background-image: linear-gradient(#79a3b3, #8c9592, #232236, #1a0f2f);
+  }
+}
+
 /* --------PC-------- */
 @media only screen and (min-width: 1366px) and (max-width: 2500px) {
   .sec-5-div .sec-5-bg {
